--- a/static/css/activities.css
+++ b/static/css/activities.css
@@ -1,4 +1,4 @@
-.all_drives_heading{
+.activity_heading{
     color: #0f3243;
     margin-top: 3rem;
     margin-left: 20%;
@@ -16,8 +16,8 @@
     justify-content: space-between;
     margin-bottom: 15px;
     border-radius: 20px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-    transition: all 0.3s ease;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease;
     width: 1100px;
     height: 100px;
     overflow: hidden;
@@ -26,7 +26,6 @@
 }
 .list-item:hover {
     box-shadow: 0 0 7px rgba(0, 0, 0, 0.4);
-    
 }
 .list-item-left {
     display: flex;
