--- a/static/css/login.css
+++ b/static/css/login.css
@@ -6,40 +6,41 @@
 
 * {
     font-family: 'helvetica';
-    transition: all 0.3s;
+    
     margin: 0;
     padding: 0;
-    /* box-sizing: border-box; */
+    box-sizing: border-box;
 }
 
 
-
-
-.container{
-    user-select: none;
-    overflow-y: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background: hsl(218deg 50% 91%);
-    height: 100vh;
+body{
+    background-color: rgba(245, 245, 245, 0.878);
 }
 
-.screen-1 {
-    background: var(--primary-color);
+.login_container{
     
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 30px;
-    box-shadow: 0 0 2em hsl(231deg 62% 94%);
-    gap: 2em;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width:30%;
    
-    padding: 5rem 3.5rem;
-    width: 20vw;
+    background-color: white;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.3);
+    border-radius: 0.5rem;
     
+    overflow-y: auto;
+    padding: 5rem 3rem;
 }
+.login_heading{
+    color: #0f3243;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px; 
+    
+   margin-left: 0;
+}
+
 form {
     
     
@@ -52,65 +53,43 @@ form {
     
     width: 100%;
 }
-.sec-2{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+
+
+
+.email,.password{
+    width: 100%;
     
 }
 
 .email-field,.password-field{
-    display: none;
-    
-}
-
-
-.email,
-.password {
-    background: hsl(0deg 0% 100%);
-    box-shadow: 0 0 2em hsl(231deg 62% 94%);
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    gap: 0.5em;
-    border-radius: 20px;
-    color: hsl(0deg 0% 30%);
     width: 100%;
-    height: max-content;
-    cursor: pointer;
     
 }
-
-.email input,
-.password input {
-    outline: none;
-    font-size: 0.9rem;
-    cursor: pointer;
-    border: none;
-    width: 80%;
-}
-
-label{
-    cursor: pointer;
-}
-
-.logo{
-    text-align: left;
-    color: var(--secondary-color);
+input[type='email'],
+input[type='password']{
+    width: 90%; 
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
 }
 
 
 .login {
     padding: 1em;
-    background: var(--secondary-color);
-    color: hsl(0, 0%, 100%);
-    border: none;
+    background-color: #0f3243;
+    color: #fff;
+    border: 1px solid #0f3243;
+    
     border-radius: 30px;
     font-weight: 600;
     width: 100%;
+    margin-bottom: 1rem;
+    transition: all 0.3s;
 }
 .login:hover{
-    background: var(--tertiary-color);
+    background-color: white;
+    color: #0f3243;
+    border: 1px solid #0f3243;
 }
 
 .footer {
@@ -180,19 +159,24 @@ button {
     margin-bottom: 10px;
     text-align: center;
 }
-.popup-content .btn {
+.popup-content .agree-btn {
+    text-align: center;
+    text-decoration: none;
     display: block;
     margin: 20px auto 0;
     padding: 10px 20px;
     background-color: #0f3243;
+    border: 1px solid #0f3243;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: all 0.3s;
 }
-.popup-content .btn:hover {
-    background-color: #63bbd1;
+.agree-btn:hover {
+    background-color: white;
+    color: #0f3243;
+    border: 1px solid #0f3243;
 }
 .close-btn {
     position: absolute;
@@ -205,6 +189,7 @@ button {
     cursor: pointer;
     padding: 0;
 }
+
 ::-webkit-scrollbar {
     width: 10px;
   }
