--- a/static/css/main.css
+++ b/static/css/main.css
@@ -4,8 +4,16 @@
 } */
 
 /* Body */
-.body {
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+/* General styles for both forms */
+body {
     font-family: 'Poppins', sans-serif;
+}
+
+.body {
+    
     background-color: #0f3243
 }
 
