--- a/static/css/my_applications.css
+++ b/static/css/my_applications.css
@@ -1,21 +1,24 @@
-/* Define CSS styles for the table with class "application-table" */
 
+
+.my_applications_heading{
+    color: #0f3243;
+    margin-top: 3rem;
+    margin-left: 20%;
+}
+.my_applications_container{
+    margin-top: 3rem;
+    margin-left: 20%;
+    margin-bottom: 3rem;
+}
 .application-table-container {
 
-    width: 1900px;
-    margin-top: 100px;
-    margin-left: 70px;
+    
+  
+    
     font-family: 'Poppins', sans-serif;
 
 }
 
-h1 {
-    margin-left: 6cm;
-    color: #19515f;
-    font-family: sans-serif, 'poppins';
-    margin-bottom: 10px;
-
-}
 
 .application-table {
     /* Reduce the margin-top */
@@ -24,7 +27,7 @@ h1 {
     height: auto;
     table-layout: auto;
     /* Reduce the width */
-    margin-left: 6cm;
+   
     margin-bottom: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
