--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,150 +1,112 @@
-h3 {
-    text-align: start;
-    padding: 2px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-family: 'Poppins', sans-serif;
-
+.profile_heading{
+    color: #0f3243;
+    margin-top: 3rem;
+    margin-left: 20%;
 }
 
-.btn-group {
+.profileContainer{
+    margin-top: 1rem;
+    margin-left: 20%;
+    margin-bottom: 3rem;
+    
+    margin-right: 1rem;
+}
+.profile_img{
+    height: 100%;
+    width: 300px;
+    
+    border-radius:5px;
+}
+.pr_profile_img,.pr_personal_info{
+    height: 100%;
+    width: max-content;    
+}
+
+.pr_personal_container{
+    width: 100%;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
     display: flex;
-    gap: 10px;
-    align-items: center;
+    gap: 1rem;
+    padding: 1rem 1rem;
+    border-radius:5px;
+}
+.pr_documents{
+    
+    width: 100%;
+    height: 100%;
+    
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    
+    padding: 1rem 1rem;
+    border-radius:5px;
+}
+.document{
+    margin: 7px 0;
+}
+.academic_details, .academic_results{
+    width: 100%;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    padding: 1rem 1rem;
+    border-radius:5px;
+}
+.pr_contact_details{
+    width: 100%;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.3);
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    padding: 1rem 1rem;
+    border-radius:5px;
+}
+.student-profile{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+
+}
+.profile_left{
+   
+   width: 55%;
+   
 }
 
-.edit-link {
-
-    padding: 4px;
+.pr_btn_group{
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+.profile_right{
+    
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+.academic_results{
+    margin-top: 1rem;
+}
+.edit_profile_btn{
+    
+    font-weight: 500;
+    padding: 8px 16px;
     background-color: #0f3243;
-    color: #ffffff;
-    border-radius: 8px;
-    width: 120px;
-    height: 40px;
-    font-size: medium;
-    border: white;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    border: none;
     cursor: pointer;
-    display: inline-block;
-    gap: 10px;
+    transition: background-color 0.3s;
+    
 }
-
-.edit-link:hover {
+.edit_profile_btn:hover{
     background-color: #63bbd1;
 }
-
-
-
-.profileContainer {
-    margin-top: 100px;
-    /* padding: 50px; */
-    margin-left: 300px;
-    font-family: 'Poppins', sans-serif;
-    /* overflow-x: hidden; */
-    overflow-y: scroll;
-
-}
-
-/* .pr-card 
-
-    border-radius: 0.25rem;
-
-} */
-
-.student-profile .pr-card {
-    border-radius: 50px;
-    color: #63bbd1;
-    padding: 10px;
-    /* max-width: 700px; */
-    box-sizing: border-box;
-}
-
-.student-profile .pr-card .pr-card-header {
-    /* display: flex; */
-    /* Center horizontally */
-    text-align: center;
-    /* Center vertically */
-    height: 150px;
-
-}
-
-.student-profile .pr-card .pr-card-header .profile_img {
-    width: 150px;
-    height: 150px;
-    object-fit: cover;
-    border: 3px solid #67b3b1;
-    border-radius: 50%;
-
-    /* Center horizontally */
-
-}
-
-.student-profile .pr-card h3 {
-    font-size: 20px;
-    font-weight: 700;
-}
-
-.student-profile .pr-card p {
-    font-size: 16px;
-    color: black;
-    font-weight: bolder;
-
-
-}
-
-.pr-1 {
-    font-weight: lighter;
-    margin-right: 20px;
-}
-
-.student-profile .profile-table th,
-.student-profile .profile-table td {
-    font-size: 14px;
-    padding: 2px;
-    color: #000;
-    align-items: start;
-}
-
-/* profile.css */
-
-.container {
-    display: flex;
-    justify-content: space-between;
-
-    /* Pushes .col-lg-8 to the right */
-
-}
-
-.contactDetails {
-    /* margin-top: 5px; */
-    /* Pushes the element to the bottom */
-    position: absolute;
-
-    overflow-y: visible;
-    width: 650px;
-    margin-left: 450px;
-    margin-bottom: 30px;
-    /* overflow: visible; */
-    border-radius: 10px;
-    box-shadow: 1px 0 12px 4px #587bb0c2;
-    /* border: 3px solid rgba(185, 185, 185, 0.901); */
-}
-
-.personalDetails {
-    /* margin-top: 5px; */
-    position: absolute;
-    margin-right: 80px;
-    margin-left: 5px;
-    width: 400px;
-    border-radius: 10px;
-    box-shadow: 1px 0 12px 4px #587bb0c2;
-    /* border: 1px solid rgba(185, 185, 185, 0.901); */
-
-}
-
-.contactDetails.pr-card-body {
-    align-items: start;
-    /* overflow-y: scroll; */
-    background-color: rgb(159, 215, 251, 0.5);
-
-
+.pr_btn_group{
+   
+    margin-left: 20%;
+    width: max-content;
 }
