--- a/static/css/registration.css
+++ b/static/css/registration.css
@@ -1,141 +1,75 @@
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+*{
     margin: 0;
-    height: 100vh;
-    font-family: 'poppins', sans-serif;
-    background-color: #f0f2f5;
+    padding: 0;
+    box-sizing: border-box;
 }
-
-.container {
-    display: flex;
-    width: 100%;
-    height: 100%;
+.reg_container{
+    width: 50vw;
+    position: fixed; 
+    left: 30%;
+   margin-top: 5%;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+    border-radius: 0.5rem;
+    max-height: 80vh; 
+    overflow-y: auto; 
+    padding: 20px; 
 }
-
-.left-section {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    color: white;
-}
-
-.upper-left,
-.lower-left {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 40px;
-}
-
-.upper-left {
-    flex: 0.5;
-    background-color: #0f3243;
-    color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.lower-left {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #c3cfd4cf;
-}
-
-.lower-left img {
-    max-width: 60%;
-    height: auto;
-    /* To maintain aspect ratio */
-}
-
-.right-section {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: whitesmoke;
-    padding: 40px;
-    position: relative;
-}
-
-.reg_container {
-    width: 100%;
-    max-width: 700px;
-    height: 650px;
-    margin-top: 20px;
-    overflow-y: scroll;
-    transition: transform 0.1s, box-shadow 0.1s;
-    background-color: #c3cfd4cf;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(10px);
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.7);
-
-}
-
-.title-box h1 {
-    text-align: center;
-    margin-bottom: 24px;
+.registration_heading{
     color: #0f3243;
-}
-
-.reg-form-group {
-    position: relative;
-    margin-bottom: 35px;
-}
-
-.reg-form-group input {
-    width: calc(100% - 55px);
-    padding: 2px 40px 8px 15px;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    font-size: 18px;
-}
-
-.reg-form-group i {
-    position: absolute;
-    top: 50%;
-    right: 15px;
-    transform: translateY(-50%);
-    color: black;
-    cursor: pointer;
-}
-
-.reg-form-group label {
-    display: block;
-    /* Ensure labels are block elements */
-    margin-bottom: 10px;
-    /* Add space below labels */
-}
-
-.btn-primary {
     width: 100%;
-    padding: 12px;
-    border: none;
-    border-radius: 5px;
-    background-color: #0f3243;
-    margin-top: 20px;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
+    text-align: center;
+    margin-bottom: 20px; 
+    
+   margin-left: 0;
 }
-
-.btn-primary:hover {
+.btn-primary{
+    background-color: #0f3243;
+    color: #fff;
+    font-weight: bold;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    width: 100%;
+    cursor: pointer;
+    transition: all 0.15s;
+}
+.btn-primary:hover{
     background-color: #63bbd1;
 }
-
-
-.error-message {
-    color: red;
-    font-size: 22px;
-    margin-top: 5px;
+.reg-form-group {
+    margin-bottom: 15px; 
 }
+input[type="text"],
+input[type="email"],
+input[type="password"],
+input[type="file"], 
+input[type="date"]
+{
+    width: 100%; 
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    border-radius: 5px; 
+   
+}
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 5px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
