--- a/users/templates/coordinator_registration.html
+++ b/users/templates/coordinator_registration.html
@@ -1,31 +1,22 @@
+{% extends "main.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Registration</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <link rel="stylesheet" href="{% static 'css/registration.css' %}">
+{% block title %}Student Registration{% endblock title %}
+{% block extra_css %}
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<link rel="stylesheet" href="{% static 'css/registration.css' %}">
+{% endblock extra_css %}
 
-</head>
-<body>
+
+
+{% block content %}
   <div class="container">
-    <div class="left-section">
-      <div class="upper-left">
-        <h1>Central Training & Placement Department</h1>
-        <h3>Providing opportunities and preparing for the workforce.</h3>
-      </div>
-      <div class="lower-left">
-        <img src="{% static 'images/image.png' %}">
-      </div>
-    </div>
-    <div class="right-section">
+    
+    
       <div class="reg_container">
-        <div class="title-box">
-          <h1>Register a Coordinator </h1>
-        </div>
+        
+          <h1 class="registration_heading">Register a Coordinator</h1>
+        
         <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
           {% for field in user_form %}
@@ -50,7 +41,7 @@
       </div>
 
 
-    </div>
+    
     
   </div>
 
@@ -75,5 +66,4 @@
       });
   });
 </script>
-</body>
-</html>
+{% endblock content %}
