--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,4 +1,4 @@
-
+<title>Login</title>
 {% load static %}
 
 {% block extra_css %}
@@ -8,10 +8,10 @@
 {% endblock extra_css %}
 
 {% block content %}
-<div class="container">
+<div class="login_container">
 
     <div class="screen-1">
-        <h1 class="logo">Login</h1>
+        <h1 class="login_heading">Login</h1>
 
         <form action="" method="POST">
             {% csrf_token %}
@@ -86,7 +86,7 @@
         </ol>
 
         <p>By clicking the "Accept" button, you agree to abide by the above undertakings.</p>
-        <a href="{% url 'register-student' %}" id="agreeBtn" class="btn btn-success">I Agree</a>
+        <a href="{% url 'register-student' %}" id="agreeBtn" class="agree-btn">I Agree</a>
     </div>
 </div>
 <script src="{% static 'js/login.js' %}"></script>
