--- a/users/templates/student_registration.html
+++ b/users/templates/student_registration.html
@@ -8,19 +8,21 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="{% static 'css/registration.css' %}">
+  <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"> 
+  <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
 
+
+  <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/upload.css' %}" />  -->
+  <link rel="stylesheet" type="text/css" href="{% static 'css/exists.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/profile.css' %}" /> 
+  <link rel="stylesheet" type="text/css" href="{% static 'css/coordinator_profile.css' %}" /> 
+  <link rel="stylesheet" type="text/css" href="{% static 'css/search.css' %}" /> 
+  <link rel="stylesheet" type="text/css" href="{% static 'css/my_applications.css' %}" /> 
+  <link rel="stylesheet" type="text/css" href="{% static 'css/edit_profile.css' %}" />
 </head>
 <body>
   <div class="container">
-    <div class="left-section">
-      <div class="upper-left">
-        <h1>Central Training & Placement Department</h1>
-        <h3>Providing opportunities and preparing for the workforce.</h3>
-      </div>
-      <div class="lower-left">
-        <img src="{% static 'images/image.png' %}" alt="Training & Placement">
-      </div>
-    </div>
+    
     <div class="right-section">
       <div class="reg_container">
         <div class="title-box">
