--- a/notices/templates/create_drive.html
+++ b/notices/templates/create_drive.html
@@ -17,7 +17,7 @@
                         {{ field }}
                     </div>
                 {% endfor %}
-                <button type="submit" class="btn btn-submit">Create</button>
+                <button type="submit" class="edit_profile_btn">Create</button>
             </form>
         </div>
    
