--- a/static/css/create_activity.css
+++ b/static/css/create_activity.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+body{
+font-family: 'Poppins', sans-serif;
+background-color: rgba(245, 245, 245, 0.878);
+}
+
 .create-activity-container {
     width: 50vw;
     position: fixed; 
@@ -8,8 +14,12 @@
     max-height: 80vh; 
     overflow-y: auto; 
     padding: 20px; 
+    background-color: #fff;
 }
 
+label{
+    font-weight: bold;
+}
 .create_activity_heading {
     color: #0f3243;
     width: 100%;
@@ -17,9 +27,25 @@
     margin-bottom: 20px; 
 }
 .btn-submit{
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    width: 100%;
+    margin-top: 1rem;
+    border: 1px solid #0f3243;
     background-color: #0f3243;
-    color: #fff;
-    font-weight: bold;
+    font-weight: 600;
+    cursor: pointer;
+    color: white;
+    margin-bottom: 20px;
+    padding: 0.75rem 1rem;
+    border-radius: 0.5rem;
+    transition: all 0.15s;
+}
+.btn-submit:hover{
+    background-color: white;
+    color: #0f3243;
+    border: 1px solid #0f3243;
 }
 .form-group {
     margin-bottom: 15px; 
@@ -30,6 +56,9 @@ input[type="email"],
 input[type="password"],
 input[type="file"], 
 input[type="date"],
+input[type="number"],
+select,
+textarea,
 #id_activity_status{
     width: 100%; 
     padding: 10px; 
@@ -82,6 +111,24 @@ label[for="id_department_9"]{
     border-bottom: 1px solid rgba(128, 128, 128, 0.241);
 }
 
+label[for="id_Profile_photo"],
+label[for="id_Xth_marksheet"],
+label[for="id_XIIth_marksheet"],
+label[for="id_Diploma_Firstyear_marksheet"],
+label[for="id_Diploma_Secondyear_marksheet"],
+label[for="id_Diploma_Thirdyear_marksheet"],
+label[for="id_sem1_marksheet"],
+label[for="id_sem2_marksheet"],
+label[for="id_sem3_marksheet"],
+label[for="id_sem4_marksheet"],
+label[for="id_sem5_marksheet"],
+label[for="id_sem6_marksheet"],
+label[for="id_sem7_marksheet"],
+label[for="id_sem8_marksheet"]{
+    
+    display: block;
+
+}
 
 /* width */
 ::-webkit-scrollbar {
