--- a/users/templates/student_registration.html
+++ b/users/templates/student_registration.html
@@ -1,33 +1,13 @@
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Registration</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-  <link rel="stylesheet" href="{% static 'css/registration.css' %}">
-  <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css"> 
-  <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}" />
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/create_activity.css' %}">
+{% endblock extra_css %}
 
-
-  <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/upload.css' %}" />  -->
-  <link rel="stylesheet" type="text/css" href="{% static 'css/exists.css' %}" />
-  <link rel="stylesheet" type="text/css" href="{% static 'css/profile.css' %}" /> 
-  <link rel="stylesheet" type="text/css" href="{% static 'css/coordinator_profile.css' %}" /> 
-  <link rel="stylesheet" type="text/css" href="{% static 'css/search.css' %}" /> 
-  <link rel="stylesheet" type="text/css" href="{% static 'css/my_applications.css' %}" /> 
-  <link rel="stylesheet" type="text/css" href="{% static 'css/edit_profile.css' %}" />
-</head>
-<body>
-  <div class="container">
     
-    <div class="right-section">
-      <div class="reg_container">
-        <div class="title-box">
-          <h1>Register Yourself Here</h1>
-        </div>
+<div class="create-activity-container" style="left: 26%;">
+       
+  <h1 class="create_activity_heading">Register Yourself Here</h1>
+      
         <form method="POST" enctype="multipart/form-data">
           {% csrf_token %}
 
@@ -62,32 +42,14 @@
             </div>
           {% endfor %}
           
-          <div class="register-btn">
-            <button type="submit" class="btn-primary">Register</button>
-          </div>
+          
+            <button type="submit" class="btn btn-submit" style="margin-bottom: 20px;">Register</button>
+          
         </form>
       </div>
-    </div>
+    
   </div>
 
-  <script>
-    document.querySelectorAll('.reg-form-group input').forEach(input => {
-      input.addEventListener('focus', function() {
-        this.nextElementSibling.style.opacity = 1;
-      });
-      input.addEventListener('blur', function() {
-        this.nextElementSibling.style.opacity = 0;
-      });
-    });
-
-    document.querySelectorAll('.toggle-password').forEach(item => {
-      item.addEventListener('click', function() {
-        const input = this.previousElementSibling;
-        const type = input.getAttribute('type') === 'password' ? 'text' : 'password';
-        input.setAttribute('type', type);
-        this.classList.toggle('fa-eye-slash');
-      });
-    });
-  </script>
+  
 </body>
 </html>
