completed password reset stuffs

--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -11,6 +11,10 @@
 <div class="login_container">
 
     <div class="screen-1">
+        <div class="mgm_logo">
+            <img id="login_mgm_logo" src="{% static 'images/image.png' %}" alt="Training & Placement">
+
+        </div>
         <h1 class="login_heading">Login</h1>
 
         <form action="" method="POST">
