--- a/users/templates/password_reset_form.html
+++ b/users/templates/password_reset_form.html
@@ -5,7 +5,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
 {% endblock %}
-<title>Login Form</title>
+<title>Password Reset Form</title>
 {% block content %}
   <div class="password_container">
     <h2>Password Reset</h2>
