--- a/static/css/exists.css
+++ b/static/css/exists.css
@@ -1,54 +1,55 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body{
+    background-color: rgba(245, 245, 245, 0.878);
+}
+
 .exists_container {
     position: fixed;
     top: 50%;
-    left: 50%;
+    left: 55%;
     transform: translate(-50%, -50%);
+    
+    width: 33vw;
+    padding: 3rem 2rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    /* Center items horizontally and vertically */
-    padding: 20px;
-    border-radius: 5px;
-    overflow: hidden;
-    box-sizing: border-box;
-    width: 600px;
-    height: 300px;
-    box-shadow: 0px 0px 20px #0f3243;
-    color: #63bbd1;
-    font-size: x-large;
+    gap: 2rem;
+    border-radius: 0.5rem;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
+    background-color: white;
     font-family: 'Poppins', sans-serif;
+    
 
 }
 
-.exists_container:hover {
-    box-shadow: 0 20px 34px #63bbd1;
 
-
-}
-
-p .exists {
-    text-align: center;
-    margin-bottom: 20px;
-    font-family: 'Poppins', sans-serif;
-    font-weight: bolder;
-    font-size: large;
+.exists {
+    font-weight: bold;
+    font-size: 20px;
 }
 
 
 
 .exists_button {
-    display: inline-block;
-    padding: 10px;
-    background-color: #0f3243;
-    color: #fff;
-    text-decoration: none;
-    border-radius: 5px;
-    transition: background-color 0.3s;
-    margin-top: 10px;
+    font-size: 16px;
+   text-decoration: none;
+   background-color: #0f3243;
+   border: 1px solid #0f3243;
+   font-weight: 600;
+   cursor: pointer;
+   color: white;
+   padding: 0.5rem 0.75rem;
+   border-radius: 0.5rem;
+   transition: all 0.15s;
 }
 
 .exists_button:hover {
-    background-color: #63bbd1;
-    cursor: pointer;
+    background-color: white;
+    border: 1px solid #0f3243;
+    color: #0f3243;
 }
