--- a/static/css/login.css
+++ b/static/css/login.css
@@ -30,7 +30,9 @@ body{
     border-radius: 0.5rem;
     
     overflow-y: auto;
-    padding: 5rem 3rem;
+    padding: 3rem 3rem;
+    padding-top: 2rem;
+
 }
 .login_heading{
     color: #0f3243;
@@ -64,6 +66,9 @@ form {
 .email-field,.password-field{
     width: 100%;
     
+}
+label{
+    font-weight: bold;
 }
 input[type='text'],
 input[type='email'],
@@ -209,4 +214,19 @@ button {
   ::-webkit-scrollbar-thumb:hover {
     background: #555;
     
+  }
+
+
+  .mgm_logo{
+    width: 100%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+  }
+  #login_mgm_logo{
+    width: 50%;
+
+  
   }
