--- a/static/css/password_reset.css
+++ b/static/css/password_reset.css
@@ -25,12 +25,26 @@ body{
     font-family: 'Poppins', sans-serif;
     
 }
+form{
+    width: 100%;
+}
+label{
+    font-weight: bold;
+    
 
+}
+input{
+    width: 100%;
+    font-size: 15px;
+    padding: 5px 3px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
 .password_reset_btn{
     font-size: 16px;
-   
-  border: none;
+   width: 100%;
    background-color: #0f3243;
+   border: 1px solid #0f3243;
    font-weight: 600;
    cursor: pointer;
    color: white;
@@ -38,4 +52,30 @@ body{
    border-radius: 0.5rem;
    transition: all 0.15s;
    margin-top: 2rem;
+}
+.password_reset_btn:hover{
+    background-color: white;
+    border: 1px solid #0f3243;
+    color: #0f3243;
+}
+.back_to_login{
+    text-decoration: none;
+    text-align: center;
+    font-size: 16px;
+   width: 100%;
+   background-color: #0f3243;
+   border: 1px solid #0f3243;
+   font-weight: 600;
+   cursor: pointer;
+   color: white;
+   padding: 0.5rem 0.75rem;
+   border-radius: 0.5rem;
+   transition: all 0.15s;
+   
+}
+
+.back_to_login:hover{
+    background-color: white;
+    border: 1px solid #0f3243;
+    color: #0f3243;
 }
