--- a/users/templates/application_success.html
+++ b/users/templates/application_success.html
@@ -1,4 +1,11 @@
 {% extends 'main.html' %}
+{% load static %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/exists.css' %}">
+
+{% endblock extra_css %}
+
+
 
 {% block content %}
 <div class="exists_container">
