--- a/users/templates/password_reset_done.html
+++ b/users/templates/password_reset_done.html
@@ -1,34 +1,18 @@
-{%load static%}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Login Form</title>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}" /> 
 
-</head>
-<body>
-<div class="container">
-    <div class="left-section">
-      <div class="upper-left">
-        <h1>Central Training & Placement Department</h1>
-        <h3>Providing opportunities and preparing for the workforce.</h3>
-    </div>
-        <div class="lower-left">
-            <!-- Add your image here -->
-            <img src="{% static 'images/image.png' %}">
+{% load static %}
 
-        </div>
-    </div>
-    <div class="right-section">
-        <div class="login-container">
-  <h2>Password Reset Sent</h2>
-  <p>An email has been sent to your email address with instructions to reset your password. Please check your inbox.</p>
-</div>
-</div>
-</div>  
-</body>
-</html>
+{% block extra_css %}
+  <link rel="stylesheet" href="{% static 'css/password_reset.css' %}" />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+{% endblock %}
+<title>Password Reset Form</title>
+{% block content %}
+  <div class="password_container">
+   
+<h2>Password Reset Sent</h2>
+<p>An email has been sent to your email address with instructions to reset your password. Please check your inbox.</p>
+
+<a href="{% url 'login' %}" class="back_to_login">Go back to Login</a>
+  </div>
+{% endblock %}
